--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/past-performance/past-performance.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/past-performance/past-performance.component.html
@@ -1,1 +1,33 @@
-<p>past-performance works!</p>
+<div class="d-flex mb-3">
+    <dd class="flex-fill m-0">
+        <p>
+            Does the offeror have three (3) or more assessment reports available in the federal Contractor Performance Assessment
+            Reporting System (CPARS) that represent:
+        </p>
+        <p>
+            (1)  contracts or orders completed within three (3) years of the date of offer submission;<br>
+            (2)  at least three (3) distinct orders and/or contracts; and<br>
+            (3)  work similar in scope to products/services included in this solicitation.
+        </p>
+        <div class="d-flex">
+            <dd class="mr-4">
+                <strong>
+                    N/A
+                </strong>
+            </dd>
+        </div>
+    </dd>
+</div><div class="d-flex mb-3">
+    <dd class="flex-fill m-0">
+        <p>
+            Address any negative feedback for each of the categories to include actions taken to minimize the problems that resulted in negative feedback.
+        </p>
+        <div class="d-flex">
+            <dd class="mr-4">
+                <strong>
+                    N/A
+                </strong>
+            </dd>
+        </div>
+    </dd>
+</div>
