--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/quality-control/quality-control.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/quality-control/quality-control.component.html
@@ -1,1 +1,90 @@
-<p>quality-control works!</p>
+<div class="d-flex mb-3">
+    <dt class="mr-2">(A)</dt>
+    <dd class="flex-fill m-0">
+        <p>
+            Description of internal review procedures that facilitate high-quality standards.
+        </p>
+        <div class="d-flex">
+            <dd class="mr-4">
+                <strong>
+                    N/A
+                </strong>
+            </dd>
+        </div>
+    </dd>
+</div>
+<div class="d-flex mb-3">
+    <dt class="mr-2">(B)</dt>
+    <dd class="flex-fill m-0">
+        <p>
+            Identification of individuals responsible for ensuring quality control.
+        </p>
+        <div class="d-flex">
+            <dd class="mr-4">
+                <strong>
+                    N/A
+                </strong>
+            </dd>
+        </div>
+    </dd>
+</div>
+<div class="d-flex mb-3">
+    <dt class="mr-2">(C)</dt>
+    <dd class="flex-fill m-0">
+        <p>
+            Whether or not subcontractors are used and, if so, the quality control measures used to ensure acceptable subcontractor performance.
+        </p>
+        <div class="d-flex">
+            <dd class="mr-4">
+                <strong>
+                    N/A
+                </strong>
+            </dd>
+        </div>
+    </dd>
+</div>
+<div class="d-flex mb-3">
+    <dt class="mr-2">(D)</dt>
+    <dd class="flex-fill m-0">
+        <p>
+            How potential problem areas and solutions are handled? 
+        </p>
+        <div class="d-flex">
+            <dd class="mr-4">
+                <strong>
+                    N/A
+                </strong>
+            </dd>
+        </div>
+    </dd>
+</div>
+<div class="d-flex mb-3">
+    <dt class="mr-2">(E)</dt>
+    <dd class="flex-fill m-0">
+        <p>
+            The procedures for ensuring quality performance when meeting urgent requirements. 
+        </p>
+        <div class="d-flex">
+            <dd class="mr-4">
+                <strong>
+                    N/A
+                </strong>
+            </dd>
+        </div>
+    </dd>
+</div>
+<div class="d-flex mb-3">
+    <dt class="mr-2">(F)</dt>
+    <dd class="flex-fill m-0">
+        <p>
+            How quality control will be managed when completing multiple projects for multiple agencies simultaneously.  
+        </p>
+        <div class="d-flex">
+            <dd class="mr-4">
+                <strong>
+                    N/A
+                </strong>
+            </dd>
+        </div>
+    </dd>
+</div>
