--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/relevant-project-experience/relevant-project-experience.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/relevant-project-experience/relevant-project-experience.component.html
@@ -1,1 +1,22 @@
-<p>relevant-project-experience works!</p>
+
+    <div class="row">
+        <div class="col-md-8">
+            <dt class="col">Project:</dt>
+            <dd class="col mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
+        </div>
+        <div class="col-md-4">
+            <dt class="col">Status:</dt>
+            <dd class="col mb-0">Completed</dd>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-8">
+            <dt class="col">Project:</dt>
+            <dd class="col mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
+        </div>
+        <div class="col-md-4">
+            <dt class="col">Status:</dt>
+            <dd class="col mb-0">Completed</dd>
+        </div>
+    </div>
