--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/trade-agreements-act-compliance/trade-agreements-act-compliance.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/trade-agreements-act-compliance/trade-agreements-act-compliance.component.html
@@ -1,1 +1,43 @@
-<p>trade-agreements-act-compliance works!</p>
+<div class="d-flex mb-4">
+    <dd class="flex-fill m-0">
+        <p>
+            Are you the manufacturer of the product(s) you are planning to offer under the proposed SIN(s)?
+        </p>
+        <div class="mb-3">
+            <div class="custom-control custom-radio custom-control-inline ml-3">
+                <input id="isManufacturerOfSINSYes" type="radio" name="isManufacturerOfSINS" class="custom-control-input"
+                    disabled />
+                <label class="custom-control-label" for="isManufacturerOfSINSYes"><u>Yes</u></label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input id="isManufacturerOfSINSNo" type="radio" name="isManufacturerOfSINS"
+                    class="custom-control-input" checked disabled />
+                <label class="custom-control-label" for="isManufacturerOfSINSNo"><u>No</u></label>
+            </div>
+        </div>
+    </dd>
+</div>
+<div class="d-flex">
+    <dd class="flex-fill m-0">
+        <p>
+            All proposed products must comply with the Trade Agreements Act (TAA). It is your responsibility to determine TAA
+            compliance. When an item consists of components from various countries and the components are assembled in an additional
+            country, the test to determine country of origin is "substantial transformation" (reference FAR 25.001(c)(2)). You can
+            go to the Office of Regulations and Rulings within U.S. Customs and Border Protection (CBP), which is the Federal agency
+            responsible for making substantial transformation determinations, reference 19 CFR 177.23. CBP's determinations or
+            opinions are based upon tariff laws. You may also request an opinion from a third-party expert or make the determination
+            itself. The Internet address for CBP is: http://www.cbp.gov/. You should keep this requirement in mind when completing
+            the TAA certification section of its SAM registration. When evaluating offers, the contracting officer will rely solely
+            on the representations and certifications of your organization and will not make substantial transformation
+            determinations.
+        </p>
+        <div class="custom-control custom-checkbox custom-control-inline my-3">
+            <input id="shallEnterNameOfEDWOSB" type="checkbox" name="shallEnterNameOfEDWOSB"
+                class="custom-control-input" checked disabled />
+            <label class="custom-control-label d-inline" for="shallEnterNameOfEDWOSB">
+                [The offeror shall enter the name or names of the EDWOSB concern and other small businesses that are
+                participating in the joint venture.]
+            </label>
+        </div>
+    </dd>
+</div>
