Applied additional enhancements for edit forms.

--- a/src/app/modules/core/components/form-accordion/form-accordion.component.css
+++ b/src/app/modules/core/components/form-accordion/form-accordion.component.css
@@ -2,7 +2,7 @@
         background-color: white;
 }
 
-/deep/ .card-header:hover {
+/deep/ accordion-group .card-header:hover {
     background-color: rgb(245, 245, 245);
 }
 
