--- a/src/assets/theme/accordions.css
+++ b/src/assets/theme/accordions.css
@@ -4,7 +4,7 @@
     background-color: #fff;
     border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
-.card-header .btn:hover {
+.card-header .btn:not(.btn-default, .btn-light):hover {
     /* transform: translateY(-3px); */
     box-shadow: none;
     z-index: 1;
