--- a/src/app/modules/supplier-portal/views/offer-form/available-offerings/available-offerings.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/available-offerings/available-offerings.component.html
@@ -18,46 +18,92 @@
         </div>
 
         <div class="row">
-            <div class="col-md-3">
-                <dt class="col">Number:</dt>
-                <dd class="col mb-0">54151HEAL</dd>
+            <div class="col-11">
+                <div class="row">
+                    <div class="col-md-3">
+                        <dt class="col">Number:</dt>
+                        <dd class="col mb-0">54151HEAL</dd>
+                    </div>
+                    <div class="col-md-3">
+                        <dt class="col">Title:</dt>
+                        <dd class="col mb-0">Health Information Technology Services</dd>
+                    </div>
+                    <div class="col-md-3">
+                        <dt class="col">Large Category:</dt>
+                        <dd class="col mb-0">Information Technology</dd>
+                    </div>
+                    <div class="col-md-3">
+                        <dt class="col">Subcategory:</dt>
+                        <dd class="col mb-0">IT Services</dd>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3">
-                <dt class="col">Title:</dt>
-                <dd class="col mb-0">Health Information Technology Services</dd>
-            </div>
-            <div class="col-md-3">
-                <dt class="col">Large Category:</dt>
-                <dd class="col mb-0">Information Technology</dd>
-            </div>
-            <div class="col-md-3">
-                <dt class="col">Subcategory:</dt>
-                <dd class="col mb-0">IT Services</dd>
+            <div class="col-1">
+                <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openModal()">
+                    <span class="fa fa-pencil"></span>
+                </button>
+                <button type="button" class="btn btn-default btn-sm text-muted bg-danger-hover">
+                    <span class="fa fa-trash"></span>
+                </button>
             </div>
         </div>
         <hr>
         <div class="row">
-            <div class="col-md-3">
-                <dt class="col">Number:</dt>
-                <dd class="col mb-0">54151HEAL</dd>
+            <div class="col-11">
+                <div class="row">
+                    <div class="col-md-3">
+                        <dt class="col">Number:</dt>
+                        <dd class="col mb-0">54151HEAL</dd>
+                    </div>
+                    <div class="col-md-3">
+                        <dt class="col">Title:</dt>
+                        <dd class="col mb-0">Health Information Technology Services</dd>
+                    </div>
+                    <div class="col-md-3">
+                        <dt class="col">Large Category:</dt>
+                        <dd class="col mb-0">Information Technology</dd>
+                    </div>
+                    <div class="col-md-3">
+                        <dt class="col">Subcategory:</dt>
+                        <dd class="col mb-0">IT Services</dd>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3">
-                <dt class="col">Title:</dt>
-                <dd class="col mb-0">Health Information Technology Services</dd>
+            <div class="col-1">
+                <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openModal()">
+                    <span class="fa fa-pencil"></span>
+                </button>
+                <button type="button" class="btn btn-default btn-sm text-muted bg-danger-hover">
+                    <span class="fa fa-trash"></span>
+                </button>
             </div>
-            <div class="col-md-3">
-                <dt class="col">Large Category:</dt>
-                <dd class="col mb-0">Information Technology</dd>
-            </div>
-            <div class="col-md-3">
-                <dt class="col">Subcategory:</dt>
-                <dd class="col mb-0">IT Services</dd>
-            </div>
+        </div>  
+
+        <hr>           
+        <div class="col mt-4 d-flex justify-content-center"> 
+            <button type="button" class="btn btn-primary btn-sm" (click)="openModal()">
+                <span class="fa fa-plus mr-2"></span>
+                Add SIN
+            </button>
         </div>
 
+        <div class="col mb-3 mt-5">
+            <div class="col border-bottom p-0">                
+                <div class="row">
 
-        <div class="col mt-5">
-            <h2 class="h4 border-bottom mb-3" id="yournegs">Preponderance of Work</h2>
+                    <div class="col-10">
+                        <h2 class="h4" id="yournegs">Preponderance of Work</h2>
+                    </div>
+
+                    <div class="col-2 d-flex justify-content-end">
+                        <button type="button" class="btn btn-primary btn-sm" (click)="openModal()">
+                            <span class="fa fa-pencil mr-2"></span>
+                            Edit
+                        </button>
+                    </div>
+
+                </div>
+            </div>
         </div>
 
         <div class="col-xs-12">
@@ -67,6 +113,7 @@
 
     </form>
 </ng-template>
+
 
 <!-- Readonly Section -->
 <ng-template #editSection>
