--- a/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
@@ -82,146 +82,33 @@
 
 <!-- Edit Section -->
 <ng-template #editSection>
-	<form id="corporateInformation">
-		<div class="usa-alert usa-alert-warning mb-4">
-			<div class="usa-alert-body">
-				<p>
-					<strong>Is the information correct?</strong>
-				</p>
-				<p>
-					This information is taken directly from <a href="http://www.sam.gov/" target="_blank">System for
-						Award Management (SAM)</a>. If any of this information is incorrect, it must be corrected
-					through <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. Any
-					changes will be reflected in eOffer in approximately 24 hours.
-				</p>
-			</div>
 
-		</div>
-		<div class="corset">
-			<h4 class="type1">Company Details</h4>
-			<table id="corpDUNS" class="table table-responsive table-flush" role="presentation">
-				<tbody>
-					<tr>
-						<td class="first" width="40%">UEI Number:</td>
-						<td width="60%">
-							DN1AKEH8VZU7
-						</td>
-					</tr>
-					<tr>
-						<td class="first">Type of Organization:</td>
-						<td class="camel">
-							Corporate Entity (Not Tax Exempt)
-						</td>
-					</tr>
-					<tr>
-						<td class="first">Common Parent UEI Number:</td>
-						<td>
-
-						</td>
-					</tr>
-					<tr>
-						<td class="first">Company Name:</td>
-						<td class="camel">NOMADIC DISPLAY CAPITOL INC</td>
-					</tr>
-					<tr>
-						<td class="first">Doing Business As (DBA):</td>
-						<td class="camel">NOMADIC DISPLAY</td>
-					</tr>
-					<tr>
-						<td class="first">Business Type(s) Registered in SAM: </td>
-						<td class="camel">
-							For-Profit Organization, Manufacturer of Goods.
-						</td>
-					</tr>
-
-					<tr>
-						<td class="first">Business Website:</td>
-						<td class="alllow">
-							www.nomadicdisplay.com
-						</td>
-					</tr>
-				</tbody>
-			</table>
-
-
-			<h4 class="type1">Company Address</h4>
-			<table id="corpAddress" class="table table-responsive table-flush w-100" role="presentation">
-
-				<tr>
-					<td class="first" width="40%">Street1:</td>
-					<td width="60%" class="camel">
-						10505 FURNACE RD STE 108
-					</td>
-				</tr>
-				<tr>
-					<td class="first">Street2:</td>
-					<td class="camel"></td>
-				</tr>
-				<tr>
-					<td class="first">City:</td>
-					<td class="camel">LORTON</td>
-				</tr>
-				<tr>
-					<td class="first">State:</td>
-					<td class="allcap">VA</td>
-				</tr>
-				<tr>
-					<td class="first">Zip/Postal Code:</td>
-					<td>220792635</td>
-				</tr>
-				<tr>
-					<td class="first">Country:</td>
-					<td class="camel">USA</td>
-				</tr>
-			</table>
-
-
-			<h4 class="type1">Mailing Address</h4>
-			<table class="table table-responsive table-flush" role="presentation">
-
-				<tbody>
-					<tr>
-						<td class="first" width="40%">Company Name:</td>
-						<td width="60%" class="camel">NOMADIC DISPLAY CAPITOL INC</td>
-					</tr>
-					<tr>
-						<td class="first">Street1:</td>
-						<td class="camel">10505 FURNACE RD STE 108</td>
-					</tr>
-					<tr>
-						<td class="first">Street2:</td>
-						<td class="camel"></td>
-					</tr>
-					<tr>
-						<td class="first">City:</td>
-						<td class="camel">LORTON</td>
-					</tr>
-					<tr>
-						<td class="first">State:</td>
-						<td class="allcap">VA</td>
-					</tr>
-					<tr>
-						<td class="first">Zip/Postal Code:</td>
-						<td>220792635</td>
-					</tr>
-					<tr>
-						<td class="first">Country:</td>
-						<td class="camel">USA</td>
-					</tr>
-				</tbody>
-			</table>
+	<div class="usa-alert usa-alert-warning mb-4">
+		<div class="usa-alert-body">
+			<p>
+				<strong>Is the information correct?</strong>
+			</p>
+			<p>
+				This information is taken directly from <a href="http://www.sam.gov/" target="_blank">System for
+					Award Management (SAM)</a>. If any of this information is incorrect, it must be corrected
+				through <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. Any
+				changes will be reflected in eOffer in approximately 24 hours.
+			</p>
 		</div>
 
-		<form id="saveAndContinueAction" name="editForm"
-			action="https://eoffer-test.fas.gsa.gov/eOffer/saveAndContinueAction.do" method="post">
-			<input type="hidden" name="token" value="null">
-			<input type="hidden" name="method" value="saveAndContinue" id="saveAndContinueAction_method">
-			<input type="hidden" name="pageName" value="corporateInformation" id="saveAndContinueAction_pageName">
-		</form>
+	</div>
 
+	<ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
+	
+	<div class="col mt-4">		
+		<div class="custom-control custom-checkbox">
+			<input type="checkbox" class="custom-control-input" id="corporateInformationVerified" name="corporateInformationVerified" value="true" checked="checked"/>
+			<label class="custom-control-label" for="corporateInformationVerified">
+				I acknowledge that I have reviewed and verified that the corporate information is correct.
+			</label>
+		</div>
+	</div>
 
-
-	</form>
 </ng-template>
 
 
@@ -234,9 +121,9 @@
 			<ng-container [ngTemplateOutlet]="editSection"></ng-container>
 		</ng-template>
 		<ng-template #modalFooter>
-			<input type="button" value="Save and Continue" id="saveAndContinue" class="btn btn-primary"
+			<input type="button" value="Save" id="saveAndContinue" class="btn btn-success btn-lg"
 				(click)="saveForm()">
-			<input type="button" value="Cancel" id="cancel" class="btn btn-default" (click)="closeModal()">
+			<input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg" (click)="closeModal()">
 		</ng-template>
 	</app-modal>
 
