--- a/src/app/modules/supplier-portal/views/offer-form/pathway-to-success/pathway-to-success.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/pathway-to-success/pathway-to-success.component.html
@@ -16,42 +16,29 @@
                 <h2 class="h4 border-bottom mb-3">Section 1 (New Offerers Only)</h2>
             </div>
             <div class="col-sm-12">
-                <p>You are required to complete the “Pathway to Success” training and the “Readiness Assessment”
-                    located
-                    at <a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>. The Pathway to Success
-                    training
-                    provides
-                    an
-                    overview of the GSA Schedule, the offer process and required information, and considerations you
-                    need to
-                    make as
-                    you
-                    are developing your offer. The Readiness Assessment is a series of questions that helps you
-                    determine
-                    the
-                    readiness
-                    of your company to become a successful GSA Schedule contractor.
+                <p>
+                    You are required to complete the “Pathway to Success” training and the “Readiness Assessment” located at 
+                    <a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>. The Pathway to Success training provides an
+                    overview of the GSA Schedule, the offer process and required information, and considerations you need to make as you are
+                    developing your offer. The Readiness Assessment is a series of questions that helps you determine the readiness of your
+                    company to become a successful GSA Schedule contractor.
                 </p>
-                <br>
                 <div>
                     <div class="custom-control custom-checkbox">
-                        <input type="checkbox" name="pathwayAcknowledged" value="true" checked="checked"
-                            id="pathwayToSuccessCertAction_pathwayAcknowledged" class="custom-control-input" disabled />
-                        <label class="custom-control-label" for="customCheck1">I acknowledge that I have downloaded and
-                            completed the <b>“Pathway to Success”</b> training located at&nbsp;<a
-                                href="http://www.gsa.gov/masroadmap:">www.gsa.gov/masroadmap</a>&nbsp;within the past 12
-                            months. &nbsp;
+                        <input type="checkbox" class="custom-control-input" id="pathwayToSuccessNewOfferers_readonly" name="pathwayToSuccessNewOfferers_readonly" value="true" checked="checked" disabled/>
+                        <label class="custom-control-label" for="pathwayToSuccessNewOfferers_readonly">
+                            I acknowledge that I have downloaded and completed the <b>“Pathway to Success”</b> training located at&nbsp;
+                            <a href="http://www.gsa.gov/masroadmap:">www.gsa.gov/masroadmap</a>
+                            &nbsp;within the past 12 months.
                         </label>
                     </div>
                     <br>
                     <div class="custom-control custom-checkbox">
-                        <input type="checkbox" name="readinessAcknowledged" value="true" checked="checked"
-                            id="pathwayToSuccessCertAction_readinessAcknowledged" class="custom-control-input"
-                            disabled />
-                        <label class="custom-control-label" for="customCheck1">I acknowledge that I have downloaded and
-                            completed the <b>“Readiness Assessment”</b> located at&nbsp;<a
-                                href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>&nbsp;within the past 12
-                            months.&nbsp;
+                        <input type="checkbox" class="custom-control-input" id="pathwayToSuccessExistingReadinessAssessment_readonly" name="pathwayToSuccessExistingReadinessAssessment_readonly" value="true" checked="checked" disabled/>
+                        <label class="custom-control-label" for="pathwayToSuccessExistingReadinessAssessment_readonly">
+                            I acknowledge that I have downloaded and completed the <b>“Readiness Assessment”</b> located at&nbsp;
+                            <a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>
+                            &nbsp;within the past 12 months.&nbsp;
                         </label>
                     </div>
                 </div>
@@ -64,17 +51,13 @@
                 If you are an existing FSS contract holder and this is a streamlined offer you are not required to
                 complete the Pathway to Success and the Readiness Assessment.
             </p>
-            <br>
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" name="existingFssContractor" value="true"
-                    id="pathwayToSuccessCertAction_existingFssContractor" class="custom-control-input" disabled />
-                <label class="custom-control-label" for="customCheck1">
+                <input type="checkbox" class="custom-control-input" id="pathwayToSuccessExistingFSSContractors_readonly" name="pathwayToSuccessExistingFSSContractors_readonly" value="true" disabled/>
+                <label class="custom-control-label" for="pathwayToSuccessExistingFSSContractors_readonly">
                     I acknowledge that I am an existing FSS contractor submitting a streamlined offer.
                 </label>
             </div>
         </div>
-
-
     </form>
 </ng-template>
 
@@ -83,65 +66,60 @@
 <!-- Edit Section -->
 <ng-template #editSection>
     <form id="pathwayToSuccess">
-        <div class="usa-alert usa-alert-info mb-4">
+        <div class="usa-alert usa-alert-warning mb-4">
             <div class="usa-alert-body">
-                <p>Complete Section 1 if you are a new offeror OR complete Section 2 if you are an existing FSS
-                    contractor
-                    submitting a streamlined offer.</p>
+                <p>
+                    Complete Section 1 if you are a new offeror OR complete Section 2 if you are an existing FSS contractor submitting a
+                    streamlined offer.
+                </p>
             </div>
         </div>
-        <h4>SECTION 1 (NEW OFFERORS ONLY)</h4>
-        <span class="h6">You are required to complete the “Pathway to Success” training and the “Readiness Assessment”
-            located
-            at <a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>. The Pathway to Success training
-            provides
-            an
-            overview of the GSA Schedule, the offer process and required information, and considerations you need to
-            make as
-            you
-            are developing your offer. The Readiness Assessment is a series of questions that helps you determine the
-            readiness
-            of your company to become a successful GSA Schedule contractor.</span>
-        <br>
-        <br>
-        <div>
-            <input type="checkbox" name="pathwayAcknowledged" value="true" checked="checked"
-                id="pathwayToSuccessCertAction_pathwayAcknowledged"><input type="hidden"
-                id="__checkbox_pathwayToSuccessCertAction_pathwayAcknowledged" name="__checkbox_pathwayAcknowledged"
-                value="true">
-            I acknowledge that I have downloaded and completed the <b>“Pathway to Success”</b> training located
-            at&nbsp;<a href="http://www.gsa.gov/masroadmap:">www.gsa.gov/masroadmap</a>&nbsp;within the past 12 months.
-            &nbsp;
+        <div class="mb-5">
+            <div class="col">
+                <h2 class="h4 border-bottom mb-3">Section 1 (New Offerers Only)</h2>
+            </div>
+            <div class="col-sm-12">
+                <p>
+                    You are required to complete the “Pathway to Success” training and the “Readiness Assessment” located at 
+                    <a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>. The Pathway to Success training provides an
+                    overview of the GSA Schedule, the offer process and required information, and considerations you need to make as you are
+                    developing your offer. The Readiness Assessment is a series of questions that helps you determine the readiness of your
+                    company to become a successful GSA Schedule contractor.
+                </p>
+                <div>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="pathwayToSuccessNewOfferers" name="pathwayToSuccessNewOfferers" value="true" checked="checked"/>
+                        <label class="custom-control-label" for="pathwayToSuccessNewOfferers">
+                            I acknowledge that I have downloaded and completed the <b>“Pathway to Success”</b> training located at&nbsp;
+                            <a href="http://www.gsa.gov/masroadmap:">www.gsa.gov/masroadmap</a>
+                            &nbsp;within the past 12 months.
+                        </label>
+                    </div>
+                    <br>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="pathwayToSuccessExistingReadinessAssessment" name="pathwayToSuccessExistingReadinessAssessment" value="true" checked="checked"/>
+                        <label class="custom-control-label" for="pathwayToSuccessExistingReadinessAssessment">
+                            I acknowledge that I have downloaded and completed the <b>“Readiness Assessment”</b> located at&nbsp;
+                            <a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>
+                            &nbsp;within the past 12 months.&nbsp;
+                        </label>
+                    </div>
+                </div>
+            </div>
         </div>
-        <br>
-        <div>
-            <input type="checkbox" name="readinessAcknowledged" value="true" checked="checked"
-                id="pathwayToSuccessCertAction_readinessAcknowledged"><input type="hidden"
-                id="__checkbox_pathwayToSuccessCertAction_readinessAcknowledged" name="__checkbox_readinessAcknowledged"
-                value="true">
-            I acknowledge that I have downloaded and completed the <b>“Readiness Assessment”</b> located at&nbsp;<a
-                href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>&nbsp;within the past 12 months.&nbsp;
-        </div>
+        <div class="col">
 
-
-
-        <br><br>
-        <hr>
-        <br><br>
-
-
-        <h4>SECTION 2 (EXISTING FSS CONTRACTOR ONLY)</h4>
-        <span class="h6">If you are an existing FSS contract holder and this is a streamlined offer you are not required
-            to
-            complete the Pathway to Success and the Readiness Assessment.</span>
-
-        <br><br>
-        <div>
-            <input type="checkbox" name="existingFssContractor" value="true"
-                id="pathwayToSuccessCertAction_existingFssContractor"><input type="hidden"
-                id="__checkbox_pathwayToSuccessCertAction_existingFssContractor" name="__checkbox_existingFssContractor"
-                value="true">
-            I acknowledge that I am an existing FSS contractor submitting a streamlined offer.
+            <h2 class="h4 border-bottom mb-3">Section 2 (Existing FSS Contractors Only)</h2>
+            <p>
+                If you are an existing FSS contract holder and this is a streamlined offer you are not required to
+                complete the Pathway to Success and the Readiness Assessment.
+            </p>
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="pathwayToSuccessExistingFSSContractors" name="pathwayToSuccessExistingFSSContractors" value="true"/>
+                <label class="custom-control-label" for="pathwayToSuccessExistingFSSContractors">
+                    I acknowledge that I am an existing FSS contractor submitting a streamlined offer.
+                </label>
+            </div>
         </div>
     </form>
 </ng-template>
@@ -156,9 +134,9 @@
             <ng-container [ngTemplateOutlet]="editSection"></ng-container>
         </ng-template>
         <ng-template #modalFooter>
-            <input type="button" value="Save and Continue" id="saveAndContinue" class="btn btn-primary"
+            <input type="button" value="Save" id="saveAndContinue" class="btn btn-success btn-lg"
                 (click)="saveForm()">
-            <input type="button" value="Cancel" id="cancel" class="btn btn-default" (click)="closeModal()">
+            <input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg" (click)="closeModal()">
         </ng-template>
     </app-modal>
 
