--- a/src/assets/theme/buttons.css
+++ b/src/assets/theme/buttons.css
@@ -886,7 +886,7 @@ input[type=submit]:hover,
   transform: translateX(40px);
 }
 
-.ck-button label:hover, input:focus + label {
+.ck-button label:hover, .ck-button  input:focus + label {
   box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 }
 
