Applied enhancements to available offerings and standard responses edit forms.

--- a/src/app/modules/core/components/modal/modal.component.html
+++ b/src/app/modules/core/components/modal/modal.component.html
@@ -1,4 +1,4 @@
-<button *ngIf="config.showDefaultOpenButton" type="button" class="btn btn-light btn-sm py-1 px-3 m-0" (click)="openModal()">
+<button *ngIf="config.showDefaultOpenButton" type="button" class="btn btn-light btn-sm py-1 px-3 m-0 bg-primary-hover" (click)="openModal()">
     <ng-container *ngIf="config.defaultOpenButtonLabel == 'Edit'">
         <span class="fa fa-pencil mr-2 gsa-light-blue"></span>
     </ng-container>
