--- a/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
@@ -123,7 +123,7 @@
 		<ng-template #modalFooter>
 			<input type="button" value="Save" id="saveAndContinue" class="btn btn-success btn-lg"
 				(click)="saveForm()">
-			<input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg" (click)="closeModal()">
+			<input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeModal()">
 		</ng-template>
 	</app-modal>
 
