--- a/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
@@ -84,7 +84,7 @@
         
         <hr>           
         <div class="col mt-4 d-flex justify-content-center"> 
-            <button type="button" class="btn btn-primary btn-sm" (click)="openModal()">
+            <button type="button" class="btn btn-light gsa-light-blue btn bg-primary-hover" (click)="openModal()">
                 <span class="fa fa-plus mr-2"></span>
                 Add Negotiator
             </button>
@@ -181,7 +181,7 @@
         <ng-template #modalFooter>
             <input type="button" value="Save" id="saveAndContinue" class="btn btn-success btn-lg"
                 (click)="saveForm()">
-            <input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg" (click)="closeModal()">
+            <input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeModal()">
         </ng-template>
     </app-modal>
 
